cros: Turn off subpixel rendering for views-based lock screen

Bug: 786343
Change-Id: I7bd5bfccfee25894499b9d1b9971691090b02ec5
Reviewed-on: https://chromium-review.googlesource.com/786267
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519400}
Former-commit-id: e5559b223b99523ee32cd57cd6e59b9ec01dfff0